css/style.css
/******** RESET ********/
* {
    margin: 0;
}
a,
a:visited  {
	text-decoration: none;
}
body {
	font-family: 'Open Sans', sans-serif;
}
/******** GENERAL ********/
.full-width {
    position: relative;
    display: block;
    float: left;
    width: 100%;
}
.center-all {
    display: block;
    max-width: 80%;
    margin: 0 auto;
}
select,
input[type='range'] {
	width: 100%;
}
input[type=range]{
	-webkit-appearance: none;
	/* fix for FF unable to apply focus style bug  */
	border: 1px solid white; 
}
input[type=range]::-webkit-slider-runnable-track {
	height: 10px;
	background: #dddddd;
	border: none;
	border-radius: 3px;
}
input[type=range]::-moz-range-track {
	height: 10px;
	background: #dddddd;
	border: none;
	border-radius: 3px;
}
input[type=range]::-ms-fill-lower {
	background: #e8972c;
	border-radius: 10px;
}
input[type=range]::-ms-fill-upper {
	background: #dddddd;
	border-radius: 10px;
}
input[type=range]::-webkit-slider-thumb {
	-webkit-appearance: none;
	border: none;
	height: 30px;
	width: 30px;
	border-radius: 50%;
	background: #ffffff;
	margin-top: -11px;
	background-image: linear-gradient(rgba(255,255,255,0),rgba(0,0,0,0.1));
	box-shadow: 0 0 8px rgba(0,0,0,0.3);
}
input[type=range]:focus {
	outline: none;
}
input[type=range]:focus::-webkit-slider-runnable-track {
	background: #ccc;
}
select {
	height: 38px;
	font-size: 15px;
	background-color: #ffffff;
	border: 1px solid #d1d1d1;
}
/******** GRID ********/
.row {
    width: 100%;
    display: block;
    float: left;
    padding: 20px 0;
}
.col {
    float: left;
    display: block;
}
.col-2 {
    width: 16.66%;
}
.col-4 {
	width: 33.32%;
}
.col-8 {
	width: 66.44%;
}
.col-10 {
    width: 83.33%;
}
/******** Main Customs ********/
.header {
    background: url('../images/header-bg.jpg') top center no-repeat;
    width: 100%;
    display: block;
    height: 140px;
}
.logo {
    display: block;
    width: 71%;
    margin: 0 auto;
}
.logo img {
	display: block;
	width: 100%;
}
h1 {
    font-size: 46px;
    margin-top: 10px;
}
main {
	margin-top: 10px;
}
.label {
	font-size: 20px;
	text-align: left;
	float: left;
	display: block;
}
.output {
	font-size: 20px;
	text-align: right;
	float: right;
	display: block;
	padding-right: 20px;
}
form .row {
	border-bottom: 1px solid #e7e7e7;
}
.wrapper input[type='radio'] {
	display: none;
}
.body input[type='radio']:checked + label,
.body input[type='radio'] + label:hover,
.beard input[type='radio']:checked + label,
.beard input[type='radio'] + label:hover,
.hair input[type='radio']:checked + label,
.hair input[type='radio'] + label:hover{
	color: #fff;
	background-color: #e8972c;
}
.body .wrapper,
.beard .wrapper,
.hair .wrapper {
	display: block;
	width: 100%;
}
.body .wrapper .wrap-input,
.beard .wrapper .wrap-input,
.hair .wrapper .wrap-input {
	display: block;
	float: left;
	width: 24.6%;
	border-top: 1px solid #e8972c;
	border-bottom: 1px solid #e8972c;
	border-left:1px solid #e8972c;
}
.body .wrapper .wrap-input:first-of-type,
.beard .wrapper .wrap-input:first-of-type,
.hair .wrapper .wrap-input:first-of-type {
	border-top-left-radius: 4px;
	border-bottom-left-radius: 4px;
}
.body .wrapper .wrap-input:last-child,
.beard .wrapper .wrap-input:last-child,
.hair .wrapper .wrap-input:last-child {
	border-right:1px solid #e8972c;
	border-top-right-radius: 4px;
	border-bottom-right-radius: 4px;
}
.body .wrapper label,
.beard .wrapper label,
.hair .wrapper label {
	display: block;
	padding: 10px;
	font: 600 12px/12px Helvetica;
	color: #e8972c;
	width: 100%;
	cursor: pointer;
	float: left;
	box-sizing: border-box;
	text-align: center;
}
.eye .wrapper input[type='radio'] {
	display: inline-block;
	padding: 0 15px;
	box-sizing: border-box;
}
.eye .wrap-input {
	display: inline-block;
	padding-left: 15px;
}
.body img,
.beard img {
	width: 60%;
	display: block;
	margin: 0 auto;
}
.body .wrapper .wrap-input {
	width: 33%;
}
.calculate {
	display: flex;
	justify-content: center;
}
.btn {
	display: block;
	margin: 0 auto 40px;
	height: 48px;
	line-height: 48px;
	color: #ffffff;
	background-color: #e8972c;
	border-radius: 4px;
	text-decoration: none;
	text-align: center;
	text-transform: uppercase;
	padding: 0 30px;
	box-sizing: border-box;
	letter-spacing: 1px;
}
.btn:hover {
	background-color: #d28115;
}
.institutional a {
	color: #d4d4d4;
	font-size: 10px;
	text-decoration: none;
	display: inline-block;
	width: 100%;
}
.institutional a:hover {
	color: #666666;
	transition: all 700ms;
}
footer .row {
	padding: 10px 0 0 0;
}
footer ul {
	list-style-type: none;
	display: inline-block;
}
.institutional {
	float: left;
	padding: 0 2px;
	color: #d4d4d4;
}
.mr-nerd {
	background: url('../images/mrnerd.png') top right no-repeat;
	padding: 0 0 8px 0;
	width: 85px;
	text-align: left;
}
.right-align {
	float: right;
	text-align: right;
}
.hide {
	display: none;
}
#result .row{
	text-align: center;
	font-size: 30px;
}
#result-value {
	display: block;
	font-size: 48px;
	font-weight: bold;
}
footer .row{
	border-top: 1px solid #dedede;
}
/******** RESPONSIVE LAYOUT ********/
@media only screen and (max-width: 1235px) {
	h1 {
		margin-top: -10px;
	}
}
@media only screen and (max-width: 767px) {
	.center-all {
		max-width: 90%;
	}
	.header {
		height: auto;
	}
	.header .col-2 {
		width: 100%;
	}
	.header .col-10 {
		width: 100%;
	}
	.header img {
		width: 19%;
		margin: 0 auto;
	}
	h1 {
		font-size: 38px;
	}
	footer .col,
	form .col {
		width: 100%;
		margin-bottom: 10px;
	}
	footer .col:first-of-type {
		display: none;
	}
	.body .wrapper .wrap-input,
	.beard .wrapper .wrap-input,
	.hair .wrapper .wrap-input {
		display: block;
		float: left;
		width: 24.4%;
		border-top: 1px solid #e8972c;
		border-bottom: 1px solid #e8972c;
		border-left:1px solid #e8972c;
	}
	.body .wrapper .wrap-input {
		width: 32.9%;
	}
}

@media only screen and (max-width: 524px) {
	h1 {
		font-size: 26px;
	}
}

